# projects

./: LICENSE  README.md
SmartAssist/: .gitignore  README.md  demo.mov  demo.py  main.py  project_requirement.md  pyproject.toml
SmartAssist/smartassist/: agent.py  config.py  models.py  prompts.py  renderer.py
SmartAssist/smartassist/tools/: __init__.py  declaration.py  functions.py
