[project]
name = "smartassist"
version = "0.1.0"
description = "An AI-powered smart assistant"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Sourav Bhattacharya", email = "bhsourav17@gmail.com" },
]

dependencies = [
    "python-dotenv",
    "openai",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
